syntax = "proto3";

package authcore.session;

message ValidateRequest {
    string refreshToken = 1;
}

message ValidateResponse {}

message InvalidateRequest {
    string accessToken = 1;
}

message InvalidateResponse {}

service Session {
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
    rpc Invalidate(InvalidateRequest) returns (InvalidateResponse) {}
}